<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info">
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:id="@+id/dashboard"
        android:background="@drawable/border_low_strong"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="140dp">
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/logos"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="1dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            app:civ_border_width="2dp"
            app:civ_border_color="#d0d0d0"/>
        <View
            android:layout_marginTop="10dp"
            android:id="@+id/line"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/logos"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/mav" />
        <TextView
            android:layout_below="@+id/line"
            android:id="@+id/teext"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="1dp"
            android:textColor="@color/siyah"
            android:text=" Kullanıcı "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_below="@+id/teext"
            android:id="@+id/name"
            android:textSize="15sp"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorAccent"
            android:text="KullanıcıAdı"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/buton_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/ic_action_namemain" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/dashboard"
        android:layout_margin="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_low_strong">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:gravity="center"
                android:text="Kan Bağış Platformu Bilgi Metni"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorText"/>
            <ImageView
                android:layout_below="@+id/title"
                android:id="@+id/icon"
                android:background="@drawable/ic_infoss_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/text1"
                android:layout_below="@id/title"
                android:layout_width="match_parent"
                android:layout_toRightOf="@+id/icon"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/info1"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_below="@+id/text1"
                android:id="@+id/icon1_2"
                android:background="@drawable/ic_infoss_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"/>
            <TextView
                android:id="@+id/text2"
                android:layout_below="@+id/text1"
                android:layout_toRightOf="@+id/icon1_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:text="@string/info2"
                android:textSize="15sp"/>
            <ImageView
                android:id="@+id/icon1_3"
                android:layout_below="@id/text2"
                android:background="@drawable/ic_infoss_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"/>
            <TextView
                android:id="@+id/text3"
                android:layout_toRightOf="@+id/icon1_3"
                android:layout_below="@id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:text="@string/info3"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_below="@id/text3"
                android:id="@+id/icon2_1"
                android:background="@drawable/ic_chevron_right_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"/>
            <TextView
                android:id="@+id/text4"
                android:layout_below="@id/text3"
                android:layout_toRightOf="@+id/icon2_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:text="@string/info4"
                android:textSize="14sp" />
            <ImageView
                android:id="@+id/icon2_2"
                android:layout_below="@+id/text4"
                android:background="@drawable/ic_chevron_right_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"/>
            <TextView
                android:id="@+id/text5"
                android:layout_below="@+id/text4"
                android:layout_toRightOf="@+id/icon2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:text="@string/info5"
                android:textSize="14sp" />
            <ImageView
                android:id="@+id/icon2_3"
                android:layout_below="@+id/text5"
                android:background="@drawable/ic_chevron_right_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"/>
            <TextView
                android:id="@+id/text6"
                android:layout_toRightOf="@+id/icon2_3"
                android:layout_below="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:text="@string/info6"
                android:textSize="13sp" />
            <ImageView
                android:id="@+id/icon2_4"
                android:layout_below="@+id/text6"
                android:background="@drawable/ic_chevron_right_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"/>
            <TextView
                android:id="@+id/text7"
                android:layout_toRightOf="@+id/icon2_4"
                android:layout_below="@+id/text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:text="@string/info7"
                android:textSize="13sp" />
            <ImageView
                android:id="@+id/icon3"
                android:layout_below="@id/text7"
                android:background="@drawable/ic_infoss_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"/>
            <TextView
                android:id="@+id/text8"
                android:layout_toRightOf="@+id/icon3"
                android:layout_below="@+id/text7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:text="@string/info8"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/icon3_1"
                android:layout_below="@+id/text8"
                android:background="@drawable/ic_chevron_right_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"/>
            <TextView
                android:id="@+id/text9"
                android:layout_toRightOf="@+id/icon3_1"
                android:layout_below="@+id/text8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:text="@string/info9"
                android:textSize="13sp" />
            <ImageView
                android:id="@+id/icon3_2"
                android:layout_below="@+id/text9"
                android:background="@drawable/ic_chevron_right_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"/>
            <TextView
                android:id="@+id/text10"
                android:layout_toRightOf="@+id/icon3_2"
                android:layout_below="@+id/text9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:text="@string/info10"
                android:textSize="13sp" />
            <ImageView
                android:id="@+id/icon3_3"
                android:layout_below="@+id/text10"
                android:background="@drawable/ic_chevron_right_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"/>
            <TextView
                android:id="@+id/text11"
                android:layout_toRightOf="@+id/icon3_3"
                android:layout_below="@+id/text10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:text="@string/info11"
                android:textSize="13sp" />
            <TextView
                android:layout_below="@+id/text11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="80dp"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>